force-app/main/default/objects/SES_Email__c/SES_Email__c.object-meta.xml
<CustomObject>
    <label>SES Email</label>
    <nameField>
        <displayFormat>E-{0000000}</displayFormat>
        <label>Email Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SES Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>