force-app/main/default/objects/SES_Email__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SES Emails</relationshipLabel>
    <relationshipName>SES_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>