force-app/main/default/objects/SES_Email__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <description>Accepts value from incoming payload</description>
    <label>Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>