force-app/main/default/objects/SES_Email__c/fields/From_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Name__c</fullName>
    <description>From name of email.</description>
    <label>From Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>