force-app/main/default/objects/SES_Email__c/fields/Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Message_ID__c</fullName>
    <description>Unique message ID to be used as external id.</description>
    <externalId>true</externalId>
    <label>Message ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>