force-app/main/default/objects/SES_Email__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the email message sent to the customer.</description>
    <inlineHelpText>Status of the email message sent to the customer.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Send</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Bounce</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Click</fullName>
            </value>
            <value>
                <fullName>Rendering Failure</fullName>
            </value>
            <value>
                <fullName>Delivery delay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>