force-app/main/default/objects/SES_Email__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>