force-app/main/default/objects/SES_Email__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <description>Customer email address.</description>
    <inlineHelpText>Customer email address.</inlineHelpText>
    <label>To Address</label>
    <type>Email</type>
</CustomField>