force-app/main/default/objects/SES_Email__c/listViews/All_Emails.listView-meta.xml
<ListView>
    <fullName>All_Emails</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>From_Address__c</columns>
    <columns>Status__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Emails</label>
</ListView>